crates/plotnik-tests/tests/02-parser/recovery_validation/alternative_label_kebab_case.txt
Q = [My-branch: (a) Other: (b)]
------------------ DIAGNOSTICS -------------------
error: alternative labels must be PascalCase
 --> query.ptk:1:6
  |
1 | Q = [My-branch: (a) Other: (b)]
  |      ^^^^^^^^^
  |
help: use `MyBranch`
  |
1 - Q = [My-branch: (a) Other: (b)]
1 + Q = [MyBranch: (a) Other: (b)]
  |
help: alternative labels name variant cases when the alternation produces a value
